--- a/FarhangbookStore.Common/FarhangbookStore.Common.csproj
+++ b/FarhangbookStore.Common/FarhangbookStore.Common.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="C:\Users\iPCsystem\.nuget\packages\ntoastnotify\8.0.0\contentFiles\any\net6.0\wwwroot\noty.js" />
+    <Content Remove="C:\Users\iPCsystem\.nuget\packages\ntoastnotify\8.0.0\contentFiles\any\net6.0\wwwroot\toastr.js" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="MD.PersianDateTime.Standard" Version="2.5.0" />
 		<PackageReference Include="NToastNotify" Version="8.0.0" />
