--- a/FarhangbookStore.DataModel/FarhangbookStore.DataModel.csproj
+++ b/FarhangbookStore.DataModel/FarhangbookStore.DataModel.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
