changelog_02-10-04 : Complete admin config entities PATCH0.3

--- a/FarhangbookStore.DataModel/FarhangbookStore.DataModel.csproj
+++ b/FarhangbookStore.DataModel/FarhangbookStore.DataModel.csproj
@@ -25,4 +25,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FarhangbookStore.Common\FarhangbookStore.Common.csproj" />
+  </ItemGroup>
+
 </Project>
