--- a/FarhangbookStore.Services/FarhangbookStore.Services.csproj
+++ b/FarhangbookStore.Services/FarhangbookStore.Services.csproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="UnitOfWork\" />
-    <Folder Include="Repository\" />
+    <ProjectReference Include="..\FarhangbookStore.DataModel\FarhangbookStore.DataModel.csproj" />
   </ItemGroup>
 
 </Project>
