--- a/FarhangbookStore/FarhangbookStore.csproj
+++ b/FarhangbookStore/FarhangbookStore.csproj
@@ -17,6 +17,21 @@
     <PackageReference Include="WebMarkupMin.AspNetCore7" Version="2.15.2" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.14" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.14">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+	</ItemGroup>
+
   <ItemGroup>
     <Folder Include="Areas\Administrator\Data\" />
     <Folder Include="Areas\Administrator\Models\" />
@@ -29,9 +44,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FarhangbookStore.Common\FarhangbookStore.Common.csproj" />
     <ProjectReference Include="..\FarhangbookStore.Configuration\FarhangbookStore.Configuration.csproj" />
     <ProjectReference Include="..\FarhangbookStore.DataModel\FarhangbookStore.DataModel.csproj" />
+    <ProjectReference Include="..\FarhangbookStore.Services\FarhangbookStore.Services.csproj" />
   </ItemGroup>
 
 </Project>
