--- a/FarhangbookStore/FarhangbookStore.csproj
+++ b/FarhangbookStore/FarhangbookStore.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="ImageProcessor.Core.CoreCompat" Version="1.3.0" />
     <PackageReference Include="MD.PersianDateTime.Standard" Version="2.5.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NToastNotify" Version="8.0.0" />
     <PackageReference Include="ReflectionIT.Mvc.Paging" Version="8.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
